# space-api

./: .env.example  .env.template  .gitignore  Cargo.toml  Dockerfile  OAUTH_INTEGRATION.md  README.md  Rocket.toml  biome.json  config.example.toml  config.toml  config.toml.example  docker-compose.yml  ecosystem.config.js  eslint.config.mjs  eslint.config.ts  nitro.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: docker.yml
src/: app.config.d.ts  lib.rs  main.rs
src/config/: settings.rs
src/data/: blurhash.json
src/models/: user.rs
src/routes/: avatar.rs  avatar.ts  email.rs  friend_avatar.rs  images.rs  index.rs  index.ts  links.rs  mod.rs  oauth.rs  status.rs  sw.js.ts  sw.rs  user.rs
src/routes/email/: verify.post.ts
src/routes/images/: wallpaper.ts  wallpaper_height.ts
src/routes/links/: compare.ts  index.ts  submit.post.ts  verify.post.ts
src/routes/oauth/qq/: authorize.ts  callback.ts
src/routes/shiro/: momment.ts
src/routes/status/: codetime.ts  getReportMsg.ts  index.ts  ncm.ts
src/routes/user/: info.ts
src/services/: db_service.rs  email_service.rs  friend_avatar_service.rs  image_service.rs  memory_service.rs  mod.rs  ncm_service.rs  oauth_service.rs  verify_service.rs
src/templates/: index.html.tera
src/utils/: apiClient.ts  cache.rs  charset.rs  custom_response.rs  db.ts  email.ts  errors.rs  image-utils.ts  jemalloc_interface.rs  mod.rs  ncm-nowplay.ts  qq-oauth.ts  response.rs  verification.ts
