[package]
name = "space-api-rs"
version = "3.1.0"
edition = "2021"
authors = ["TNXG"]
description = "天翔TNXGの空间站API - Rust版"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
panic = "abort"
strip = "symbols"

[dependencies]
# Web 框架
rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = "0.6.0"

# 序列化/反序列化
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# 异步运行时
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "time"] }

mongodb = { version = "3.4.1", features = ["rustls-tls"] }

# 配置管理
config = "0.15.19"

# HTTP客户端
reqwest = { version = "0.12.25", default-features = false, features = ["json", "rustls-tls"] }

# 环境变量
dotenv = "0.15.0"

# 时间处理
chrono = { version = "0.4.42", features = ["serde"] }

# 缓存
moka = { version = "0.12.11", features = ["future"] }

lettre = { version = "0.11.19", default-features = false, features = [
  "builder",
  "smtp-transport",
  "tokio1",
  "tokio1-rustls-tls",
  "serde",
] }
once_cell = "1.21.3"
rand = "0.9.2"
thiserror = "2.0.17"
tokio-stream = "0.1.17"
md5 = "0.8.0"
aes = "0.8.4"
block-modes = { version = "0.9.1" }
base64 = "0.22.1"
bytes = "1.11.0"
urlencoding = "2.1.3"
hex = "0.4.3"
block-padding = "0.4.2"
ecb = "0.1.2"
image = { version = "0.25.9", default-features = false, features = [
  "png",
  "jpeg",
  "webp",
  "avif",
] }
ravif = "0.12.0"
url = "2.5.7"
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
sysinfo = "0.37.2"
